# ubuntu

./: Date.cpp  README.md  clock.cpp  daemon.c  http.c  job.c  ls.c  overlode.cpp  pth.c  quickSort.cpp  quote.cpp  sigchld.c  test.c  ticket.c
Learning_asio/chat_server/: CMakeLists.txt  readme.md
Learning_asio/chat_server/etc/: chatserver.conf
Learning_asio/chat_server/opt/mysql/include/: errmsg.h  m_ctype.h  m_string.h  my_config.h  my_global.h  my_xml.h  mysql_version.h  sql_common.h  sslopt-case.h  sslopt-longopts.h  sslopt-vars.h
Learning_asio/chat_server/opt/mysql/include/mysql/: innodb_priv.h  thread_pool_priv.h
Learning_asio/chat_server/opt/mysql/include/mysql/psi/: mysql_thread.h
Learning_asio/chat_server/opt/mysql/include_linux/: my_config.h  my_getopt.h  my_net.h  my_pthread.h  my_sys.h  mysql.h  mysql_com.h  mysql_time.h  mysql_version.h  sql_common.h  typelib.h
Learning_asio/chat_server/opt/mysql/include_linux/mysql/: plugin.h
Learning_asio/chat_server/opt/mysql/lib/: libmysql.lib  libmysqlclient.so.20
Learning_asio/chat_server/opt/mysql/lib/debug/: auth_win_client.lib  clientlib.lib  taocrypt.lib  vio.lib  yassl.lib  zlib.lib
Learning_asio/chat_server/src/: CMakeLists.txt  main.cpp
Learning_asio/chat_server/src/base/: AsyncLogging.cpp  AsyncLogging.h  ConfigFileReader.cpp  ConfigFileReader.h  CountDownLatch.cpp  CountDownLatch.h  Singleton.h  Timestamp.cpp  Timestamp.h
Learning_asio/chat_server/src/chatserver/: BussinessLogic.cpp  BussinessLogic.h  HttpServer.cpp  HttpServer.h  Msg.h  Tcp_session.cpp  Tcp_session.h  UserManager.cpp  UserManager.h  chat_server.cpp  chat_server.h  chat_session.cpp  chat_session.h  http_session.cpp  http_session.h  main.cpp
Learning_asio/chat_server/src/mysqlapi/: DatabaseMysql.cpp  DatabaseMysql.h  Field.cpp  Field.h  QueryResult.cpp  QueryResult.h
Learning_asio/chat_server/src/mysqlmgr/: MysqlManager.cpp  MysqlManager.h  MysqlTask.h  MysqlThrd.cpp  MysqlThrd.h  MysqlThrdMgr.cpp  MysqlThrdMgr.h  TaskList.cpp  TaskList.h
Learning_asio/chat_server/src/net/: Buffer.cpp  Buffer.h  Callbacks.h  Channel.cpp  Channel.h  EventLoop.cpp  EventLoop.h  ProtocolStream.h  Tcp_connection.cpp  Tcp_connection.h  Tcp_server.cpp  Tcp_server.h  TimerQueue.cpp  io_service_pool.cpp  io_service_pool.h  session_mgr.cpp  session_mgr.h
Learning_asio/chat_server/src/utils/: DaemonRun.cpp  DaemonRun.h  StringUtil.cpp  StringUtil.h  id_worker.h
Learning_asio/chat_server/src/zlib1.2.11/: ZlibUtil.cpp  gzguts.h  gzlib.c  gzread.c
Learning_asio/http/: CMakeLists.txt
Learning_asio/http/src/: CMakeLists.txt  main.cpp
linux/protobuf/: CMakeLists.txt
linux/protobuf/opt/protobuf/include/google/protobuf/: any.pb.cc  any_test.pb.cc  any_test.pb.h  api.pb.cc  arena_test_util.h  arena_unittest.cc  arenastring_unittest.cc  descriptor.cc  descriptor.pb.cc  descriptor_database_unittest.cc  descriptor_unittest.cc  drop_unknown_fields_test.cc  duration.pb.cc  dynamic_message.cc  dynamic_message_unittest.cc  empty.pb.cc  extension_set_heavy.cc  extension_set_unittest.cc  field_mask.pb.cc  generated_message_reflection.cc  generated_message_reflection_unittest.cc  generated_message_table_driven.cc  lite_arena_unittest.cc  lite_unittest.cc  map_field.cc  map_field_test.cc  map_lite_unittest.pb.cc  map_lite_unittest.pb.h  map_proto2_unittest.pb.cc  map_proto2_unittest.pb.h  map_test.cc  map_test_util.cc  map_unittest.pb.cc  map_unittest.pb.h  message.cc  message_unittest.cc  message_unittest.inc  preserve_unknown_enum_test.cc  proto3_arena_lite_unittest.cc  proto3_arena_unittest.cc  (+82 more)
linux/protobuf/opt/protobuf/include/google/protobuf/compiler/: command_line_interface.cc  command_line_interface_unittest.cc  importer.cc  importer_unittest.cc  main.cc  mock_code_generator.cc  parser.cc  parser_unittest.cc  plugin.cc  plugin.pb.cc  subprocess.cc  test_plugin.cc  zip_writer.cc
linux/protobuf/opt/protobuf/include/google/protobuf/compiler/cpp/: cpp_bootstrap_unittest.cc  cpp_enum.cc  cpp_enum_field.cc  cpp_extension.cc  cpp_field.cc  cpp_field.h  cpp_file.cc  cpp_file.h  cpp_generator.cc  cpp_helpers.cc  cpp_helpers.h  cpp_map_field.cc  cpp_map_field.h  cpp_message.cc  cpp_message.h  cpp_message_field.cc  cpp_message_field.h  cpp_options.h  cpp_padding_optimizer.cc  cpp_padding_optimizer.h  cpp_plugin_unittest.cc  cpp_primitive_field.cc  cpp_service.cc  cpp_string_field.cc  cpp_string_field.h  cpp_test_bad_identifiers.pb.cc  cpp_test_bad_identifiers.pb.h  cpp_test_bad_identifiers.proto  cpp_test_large_enum_value.pb.cc  cpp_test_large_enum_value.pb.h  cpp_unittest.cc  cpp_unittest.inc  metadata_test.cc
linux/protobuf/opt/protobuf/include/google/protobuf/compiler/csharp/: csharp_bootstrap_unittest.cc  csharp_enum_field.cc  csharp_field_base.cc  csharp_generator.cc  csharp_helpers.cc  csharp_map_field.cc  csharp_message.cc  (+4 more)
linux/protobuf/opt/protobuf/include/google/protobuf/io/: coded_stream_unittest.cc  printer.cc  printer_unittest.cc  tokenizer_unittest.cc  zero_copy_stream_unittest.cc
linux/protobuf/opt/protobuf/include/google/protobuf/stubs/: common_unittest.cc  int128_unittest.cc  io_win32_unittest.cc  stringpiece_unittest.cc  strutil_unittest.cc  time_test.cc
linux/protobuf/opt/protobuf/include/google/protobuf/testing/: file.cc  googletest.cc
linux/protobuf/opt/protobuf/include/google/protobuf/util/: delimited_message_util.cc  delimited_message_util_test.cc  field_comparator.cc  field_comparator_test.cc  field_mask_util.cc  field_mask_util_test.cc  json_format_proto3.pb.cc  json_format_proto3.pb.h  json_format_proto3.proto  json_util.cc  json_util_test.cc  message_differencer.cc  message_differencer_unittest.cc  message_differencer_unittest.pb.cc  message_differencer_unittest.pb.h  time_util.cc  type_resolver_util.cc  type_resolver_util_test.cc
linux/protobuf/src/main/: CMakeLists.txt  main.cpp
linux/protobuf/src/proto/: CMakeLists.txt  build_proto.sh  message.proto
linux/protobuf/src/proto/src/: message.pb.cc  message.pb.h
timer/t2/: CMakeLists.txt
timer/t2/src/: Timer.cpp  Timer.h  TimerManager.cpp  TimerManager.h  main.cpp
(+334 files in other folders)
